# mxnet-insightface-cpp

./: CMakeLists.txt  Mxnet_mtcnn.cpp  README.md  README_zh.md  buffer_file.hpp  comm_lib.cpp  comm_lib.hpp  face_align.hpp  feature_extract.hpp  features.xml  first.cpp  main.cpp  make_label.hpp  mtcnn.hpp  mxnet_mtcnn.hpp  utils.cpp  utils.h  utils.hpp
lib/: readme.md
src/: Mxnet_mtcnn.cpp  comm_lib.cpp  face_align.hpp  feature_extract.hpp  features.xml  first.cpp  labels.txt  main.cpp  make_label.hpp  utils.cpp
